--- a/Web-Application/templates/dashboard/Home.html
+++ b/Web-Application/templates/dashboard/Home.html
@@ -108,17 +108,26 @@
 		{
 			console.log(obj.innerHTML);
 			if (obj.innerHTML == sessionStorage.getItem('id')) {
-				window.location.href = "home.html";
+				window.location.href = "Home.html";
 			}
-			sessionStorage.setItem('friend_id',obj.innerHTML);
-			window.location.href = "friend.html";
+			else {
+				sessionStorage.setItem('friend_id',obj.innerHTML);
+				window.location.href = "friend.html";
+			}
+			
 		}
 
 		// Called when follower/followee name is clicked
 		function openFriendPageById(obj)
 		{
-			sessionStorage.setItem('friend_id',obj);
-			window.location.href = "friend.html";
+			if (obj == sessionStorage.getItem('id')) {
+				window.location.href = "Home.html";
+			}
+			else {
+				sessionStorage.setItem('friend_id',obj);
+				window.location.href = "friend.html";
+			}
+			
 		}
 
 		// Called when book name is clicked
@@ -203,7 +212,7 @@
 			// src.push(temp);
 
 		});
-			console.log(src);
+
 			$("#search").autocomplete({
 				source: src,
 				select: function (e, ui) {
@@ -280,6 +289,8 @@
 			var follower_list_items = follower_list_display.childNodes;
 			var followee_list_display = document.getElementById('followee-list_outer');
 			var followee_list_items = followee_list_display.childNodes;
+			var donereading_list_display = document.getElementById('donereading-list_outer');
+			var donereading_list_items = donereading_list_display.childNodes;
 			
 			if (data["status"] == true) {
 
@@ -315,13 +326,44 @@
 					f2 += 1;
 				}
 
+				// Extract already read books. (Servlet returns only book ids)
+				// Now, using book_id, get the details of the book
+				donereading_list = data["done-reading"];
+				var b2 = 0;
+				for (var read_book_id in donereading_list) {
+					// console.log(donereading_list[read_book_id]);
+
+					// Get details of this particular book
+					$.get("http://10.130.10.35:8080/DBProject/GetDetails", {id : donereading_list[read_book_id], type : "book"},function(data,status) {
+
+						// console.log(data);
+						if (data["status"] == true) {
+							read_book_name = data["Name"];
+						}
+						else {
+							alert("Can't retrieve book details");
+						}
+
+					});
+
+
+					while (donereading_list_items[b2].nodeType != 1) {
+						b2 += 1;
+					}
+
+					donereading_list_items[b2].innerHTML = "<p class=\"followee-list_name\"><a onclick='openBookPage(" + donereading_list[read_book_id] +");'>" + read_book_name +"</a></p>";
+					b2 += 1;
+				}
+
 				// Extract reading books. (Servlet returns only book ids)
 				// Now, using book_id, get the details of the book
 				book_list = data["books"];
 				var b1 = 1;
+
 				for (var book_id in book_list) {
 					console.log(book_list[book_id]);
 
+					// Get details of this particular book
 					$.get("http://10.130.10.35:8080/DBProject/GetDetails", {id : book_list[book_id], type : "book"},function(data,status) {
 
 						// console.log(data);
@@ -357,7 +399,7 @@
 
 					});
 
-}
+				}
 
 				// Update remaining info in page
 				document.getElementById("cover-name").innerHTML = name;
@@ -463,7 +505,7 @@
 
 				<!-- LOWER LEFT BLOCK -->
 
-				<div class="mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--8-col">
+				<div class="mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--8-col" style="height:100%">
 
 					<!-- Heading -->
 					<div class="book-suggest-heading">
@@ -476,7 +518,7 @@
 
 						<div class="book-suggest mdl-cell mdl-cell-4-col" id="book-suggest1">
 							<img src="images/Book.gif" width="100%">
-							<h5></h5>
+							<h5 style="text-align:center"></h5>
 							<h6></h6>
 							<div class="rating">
 								<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span>
@@ -486,7 +528,7 @@
 
 						<div class="book-suggest mdl-cell mdl-cell--4-col" id="book-suggest2">
 							<img src="images/Book.gif" width="100%">  
-							<h5></h5>
+							<h5 style="text-align:center"></h5>
 							<h6></h6>
 							<div class="rating">
 								<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span><span>&#9734</span>
@@ -496,7 +538,7 @@
 
 						<div class="book-suggest mdl-cell mdl-cell--4-col" id="book-suggest3">
 							<img src="images/Book.gif" width="100%">  
-							<h5></h5>
+							<h5 style="text-align:center"></h5>
 							<h6></h6>
 							<div class="rating">
 								<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span>
@@ -515,7 +557,7 @@
 
 				<!-- RIGHT CARDS -->
 
-				<div class="demo-cards mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-grid mdl-grid--no-spacing">
+				<div class="demo-cards mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-grid mdl-grid--no-spacing" >
 
 					<!-- TOP RIGHT CARD -->
 					<div class="mdl-card mdl-color--light-blue-100 mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--12-col-desktop">
@@ -551,7 +593,7 @@
 					<!-- SEPARATOR -->
 					<div class="demo-separator mdl-cell--1-col"></div>
 
-					<!-- BOTTOM CARD -->
+					<!-- MIDDLE CARD -->
 					<div class="mdl-card mdl-color--light-blue-100 mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet mdl-cell--12-col-desktop">
 
 						<!-- Followee heading -->
@@ -563,6 +605,40 @@
 						<!-- Followee list -->
 						<div class="followee-list">
 							<ul class="followee-list_outer" id="followee-list_outer">
+								<li>
+									<p class="followee-list_name"></p>
+								</li>
+								<li>
+									<p class="followee-list_name"></p>
+								</li>
+								<li>
+									<p class="followee-list_name"></p>
+								</li>
+							</ul>
+						</div>
+
+						<!-- Read more block -->
+						<div class="mdl-card__actions mdl-card--border" id="follower_read-more">
+							<a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect">View More</a>
+						</div>
+
+					</div>
+
+					<!-- SEPARATOR -->
+					<div class="demo-separator mdl-cell--1-col"></div>
+
+					<!-- BOTTOM CARD -->
+					<div class="mdl-card mdl-color--light-blue-100 mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet mdl-cell--12-col-desktop">
+
+						<!-- Followee heading -->
+						<div class="followee-list_heading mdl-color--light-blue-200">
+							<i class="friend-icon glyphicon glyphicon-book"></i>
+							<h2 id="followee-list_head">Done Reading:</h2>
+						</div>
+
+						<!-- Followee list -->
+						<div class="followee-list">
+							<ul class="followee-list_outer" id="donereading-list_outer">
 								<li>
 									<p class="followee-list_name"></p>
 								</li>
