Added suggested books and suggested readers section on home.html

--- a/Web-Application/templates/dashboard/Home.html
+++ b/Web-Application/templates/dashboard/Home.html
@@ -503,54 +503,113 @@
 
 				</div>
 
-				<!-- LOWER LEFT BLOCK -->
+				<!-- LEFT BLOCKS -->
 
-				<div class="mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--8-col" style="height:100%">
+				<div class="demo-cards mdl-cell mdl-cell--8-col mdl-grid mdl-grid--no-spacing">
 
-					<!-- Heading -->
-					<div class="book-suggest-heading">
-						<i class="book-suggest-icon glyphicon glyphicon-bookmark"></i>
-						<h4>Recent books:</h4>
+					<!-- UPPER ONE -->
+					<div class="mdl-card mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
+
+						<!-- Heading -->
+						<div class="book-suggest-heading">
+							<i class="book-suggest-icon glyphicon glyphicon-bookmark"></i>
+							<h4>Recent books:</h4>
+						</div>
+
+						<!-- List of books -->
+						<div class="booklist-suggest mdl-grid">
+
+							<div class="book-suggest mdl-cell mdl-cell-4-col" id="book-suggest1">
+								<img src="images/Book.gif" width="100%">
+								<h5 style="text-align:center"></h5>
+								<h6></h6>
+								<div class="rating">
+									<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span>
+									<p>4.3/5</p> -->
+								</div>
+							</div>
+
+							<div class="book-suggest mdl-cell mdl-cell--4-col" id="book-suggest2">
+								<img src="images/Book.gif" width="100%">  
+								<h5 style="text-align:center"></h5>
+								<h6></h6>
+								<div class="rating">
+									<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span><span>&#9734</span>
+									<p>3.2/5</p> -->
+								</div>
+							</div>
+
+							<div class="book-suggest mdl-cell mdl-cell--4-col" id="book-suggest3">
+								<img src="images/Book.gif" width="100%">  
+								<h5 style="text-align:center"></h5>
+								<h6></h6>
+								<div class="rating">
+									<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span>
+									<p>4.7/5</p> -->
+								</div>
+							</div>
+
+						</div>
+
+						<!-- Read more block -->
+						<div class="mdl-card__actions mdl-card--border">
+							<a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect">See More Books</a>
+						</div>
+
 					</div>
 
-					<!-- List of books -->
-					<div class="booklist-suggest mdl-grid">
+					<!-- SEPARATOR -->
+					<div class="demo-separator mdl-cell--1-col"></div>
 
-						<div class="book-suggest mdl-cell mdl-cell-4-col" id="book-suggest1">
-							<img src="images/Book.gif" width="100%">
-							<h5 style="text-align:center"></h5>
-							<h6></h6>
-							<div class="rating">
-								<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span>
-								<p>4.3/5</p> -->
-							</div>
+					<!-- LOWER ONE -->
+					<div class="mdl-card mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
+
+						<!-- Heading -->
+						<div class="book-suggest-heading">
+							<i class="book-suggest-icon glyphicon glyphicon-bookmark"></i>
+							<h4>Suggested books:</h4>
 						</div>
 
-						<div class="book-suggest mdl-cell mdl-cell--4-col" id="book-suggest2">
-							<img src="images/Book.gif" width="100%">  
-							<h5 style="text-align:center"></h5>
-							<h6></h6>
-							<div class="rating">
-								<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span><span>&#9734</span>
-								<p>3.2/5</p> -->
+						<!-- List of books -->
+						<div class="booklist-suggest mdl-grid">
+
+							<div class="book-suggest mdl-cell mdl-cell-4-col" id="book-suggest1">
+								<img src="images/Book.gif" width="100%">
+								<h5 style="text-align:center"></h5>
+								<h6></h6>
+								<div class="rating">
+									<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span>
+									<p>4.3/5</p> -->
+								</div>
 							</div>
+
+							<div class="book-suggest mdl-cell mdl-cell--4-col" id="book-suggest2">
+								<img src="images/Book.gif" width="100%">  
+								<h5 style="text-align:center"></h5>
+								<h6></h6>
+								<div class="rating">
+									<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span><span>&#9734</span>
+									<p>3.2/5</p> -->
+								</div>
+							</div>
+
+							<div class="book-suggest mdl-cell mdl-cell--4-col" id="book-suggest3">
+								<img src="images/Book.gif" width="100%">  
+								<h5 style="text-align:center"></h5>
+								<h6></h6>
+								<div class="rating">
+									<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span>
+									<p>4.7/5</p> -->
+								</div>
+							</div>
+
 						</div>
 
-						<div class="book-suggest mdl-cell mdl-cell--4-col" id="book-suggest3">
-							<img src="images/Book.gif" width="100%">  
-							<h5 style="text-align:center"></h5>
-							<h6></h6>
-							<div class="rating">
-								<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span>
-								<p>4.7/5</p> -->
-							</div>
+						<!-- Read more block -->
+						<div class="mdl-card__actions mdl-card--border">
+							<a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect">See More Books</a>
 						</div>
-
-					</div>
-
-					<!-- Read more block -->
-					<div class="mdl-card__actions mdl-card--border">
-						<a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect">See More Books</a>
+						
 					</div>
 
 				</div>
@@ -593,7 +652,7 @@
 					<!-- SEPARATOR -->
 					<div class="demo-separator mdl-cell--1-col"></div>
 
-					<!-- MIDDLE CARD -->
+					<!-- SECOND CARD -->
 					<div class="mdl-card mdl-color--light-blue-100 mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet mdl-cell--12-col-desktop">
 
 						<!-- Followee heading -->
@@ -627,18 +686,52 @@
 					<!-- SEPARATOR -->
 					<div class="demo-separator mdl-cell--1-col"></div>
 
-					<!-- BOTTOM CARD -->
+					<!-- THIRD CARD -->
 					<div class="mdl-card mdl-color--light-blue-100 mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet mdl-cell--12-col-desktop">
 
 						<!-- Followee heading -->
 						<div class="followee-list_heading mdl-color--light-blue-200">
-							<i class="friend-icon glyphicon glyphicon-book"></i>
+							<i class="friend-icon glyphicon glyphicon-ok"></i>
 							<h2 id="followee-list_head">Done Reading:</h2>
 						</div>
 
 						<!-- Followee list -->
 						<div class="followee-list">
 							<ul class="followee-list_outer" id="donereading-list_outer">
+								<li>
+									<p class="followee-list_name"></p>
+								</li>
+								<li>
+									<p class="followee-list_name"></p>
+								</li>
+								<li>
+									<p class="followee-list_name"></p>
+								</li>
+							</ul>
+						</div>
+
+						<!-- Read more block -->
+						<div class="mdl-card__actions mdl-card--border" id="follower_read-more">
+							<a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect">View More</a>
+						</div>
+
+					</div>
+
+					<!-- SEPARATOR -->
+					<div class="demo-separator mdl-cell--1-col"></div>
+
+					<!-- FOURTH CARD -->
+					<div class="mdl-card mdl-color--light-blue-100 mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet mdl-cell--12-col-desktop">
+
+						<!-- Followee heading -->
+						<div class="followee-list_heading mdl-color--light-blue-200">
+							<i class="friend-icon glyphicon glyphicon-plus"></i>
+							<h2 id="followee-list_head">Suggested readers:</h2>
+						</div>
+
+						<!-- Followee list -->
+						<div class="followee-list">
+							<ul class="followee-list_outer" id="suggest-readers-list_outer">
 								<li>
 									<p class="followee-list_name"></p>
 								</li>
