--- a/Web-Application/templates/dashboard/friend.html
+++ b/Web-Application/templates/dashboard/friend.html
@@ -587,7 +587,7 @@
 
 				<!-- LOWER LEFT BLOCK -->
 
-				<div class="mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--8-col">
+				<div class="mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--8-col" style="height:100%">
 
 					<!-- Heading -->
 					<div class="book-suggest-heading">
@@ -714,7 +714,7 @@
 
 						<!-- Followee heading -->
 						<div class="followee-list_heading mdl-color--light-blue-200">
-							<i class="friend-icon glyphicon glyphicon-book"></i>
+							<i class="friend-icon glyphicon glyphicon-ok"></i>
 							<h2 id="followee-list_head">Done Reading:</h2>
 						</div>
 
