--- a/Web-Application/templates/dashboard/search.html
+++ b/Web-Application/templates/dashboard/search.html
@@ -606,7 +606,7 @@
 
 				</div> -->
 
-				<!-- LOWER LEFT BLOCK -->
+				<!-- UPPER BLOCK -->
 
 				<div class="mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--12-col">
 
@@ -618,49 +618,100 @@
 
 					<!-- Search by genre division -->
 					<div class="book-search-genre">
-						<h4>By Genre: </h4>
+						
+						<!-- Heading for search -->
+						<label for="archgenre">By Genre: </label>
 						<input type="text" id="searchgenre" onkeydown="handle(this)">
+
+						<!-- List of books -->
+						<div class="booklist-search mdl-grid">
+
+							<div class="book-search mdl-cell mdl-cell-4-col" id="book-search1">
+								<img src="images/Book.gif" width="100%">
+								<h5></h5>
+								<h6></h6>
+								<div class="rating">
+									<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span>
+									<p>4.3/5</p> -->
+								</div>
+							</div>
+
+							<div class="book-search mdl-cell mdl-cell--4-col" id="book-search2">
+								<img src="images/Book.gif" width="100%">  
+								<h5></h5>
+								<h6></h6>
+								<div class="rating">
+									<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span><span>&#9734</span>
+									<p>3.2/5</p> -->
+								</div>
+							</div>
+
+							<div class="book-search mdl-cell mdl-cell--4-col" id="book-search3">
+								<img src="images/Book.gif" width="100%">  
+								<h5></h5>
+								<h6></h6>
+								<div class="rating">
+									<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span>
+									<p>4.7/5</p> -->
+								</div>
+							</div>
+
+						</div>
+
+						<!-- Read more block -->
+						<div class="mdl-card__actions mdl-card--border">
+							<a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect">See More Books</a>
+						</div>
+
+					</div>
+
+					<!-- Search by genre division -->
+					<div class="book-search-genre" style="padding-top:30px">
+
+						<!-- Heading for search -->
+						<label for="searchauthor">By Author: </label>
 						<input type="text" id="searchauthor" onkeydown="handle(this)">
-					</div>
 
-					<!-- List of books -->
-					<div class="booklist-search mdl-grid">
+						<!-- List of books -->
+						<div class="booklist-search mdl-grid">
 
-						<div class="book-search mdl-cell mdl-cell-4-col" id="book-search1">
-							<img src="images/Book.gif" width="100%">
-							<h5></h5>
-							<h6></h6>
-							<div class="rating">
-								<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span>
-								<p>4.3/5</p> -->
+							<div class="book-search mdl-cell mdl-cell-4-col" id="book-search1">
+								<img src="images/Book.gif" width="100%">
+								<h5></h5>
+								<h6></h6>
+								<div class="rating">
+									<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span>
+									<p>4.3/5</p> -->
+								</div>
 							</div>
+
+							<div class="book-search mdl-cell mdl-cell--4-col" id="book-search2">
+								<img src="images/Book.gif" width="100%">  
+								<h5></h5>
+								<h6></h6>
+								<div class="rating">
+									<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span><span>&#9734</span>
+									<p>3.2/5</p> -->
+								</div>
+							</div>
+
+							<div class="book-search mdl-cell mdl-cell--4-col" id="book-search3">
+								<img src="images/Book.gif" width="100%">  
+								<h5></h5>
+								<h6></h6>
+								<div class="rating">
+									<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span>
+									<p>4.7/5</p> -->
+								</div>
+							</div>
+
 						</div>
 
-						<div class="book-search mdl-cell mdl-cell--4-col" id="book-search2">
-							<img src="images/Book.gif" width="100%">  
-							<h5></h5>
-							<h6></h6>
-							<div class="rating">
-								<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span><span>&#9734</span>
-								<p>3.2/5</p> -->
-							</div>
+						<!-- Read more block -->
+						<div class="mdl-card__actions mdl-card--border">
+							<a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect">See More Books</a>
 						</div>
-
-						<div class="book-search mdl-cell mdl-cell--4-col" id="book-search3">
-							<img src="images/Book.gif" width="100%">  
-							<h5></h5>
-							<h6></h6>
-							<div class="rating">
-								<!-- <span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span>
-								<p>4.7/5</p> -->
-							</div>
-						</div>
-
-					</div>
-
-					<!-- Read more block -->
-					<div class="mdl-card__actions mdl-card--border">
-						<a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect">See More Books</a>
+						
 					</div>
 
 				</div>
